# font-registry

./: .env.example  .gitignore  README.md  app.vue  fix_deps.sh  nuxt.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: release-zip-server.yml
components/: MdcA.vue  MdcImg.vue  Vditor.vue  cdn-changelog.vue  global-header.vue  import-from-github-dialog.vue  magic-dialog.vue  magic-form.vue  package-detail-row.vue  package-form.vue  package-name.vue  package-search.vue  page-header.vue  upload-list.vue  version-form.vue  version-panel.vue
composables/: interface.ts  removeNulls.ts  useAI.ts  useAsyncAction.ts  useFont.ts  useImportFromGithub.ts  useLicense.ts  useMagicDialog.ts  usePreBuildFont.ts  useRules.ts  useSuperMode.ts  useUser.ts
crates/zip-server/: Cargo.toml  Dockerfile
crates/zip-server/src/: adapt_7z.rs  adapt_zip.rs  main.rs
layouts/: default.vue  packages.vue
pages/: index.vue  login.vue  user.vue
pages/cache/: index.vue
pages/system/: changelog.vue
pages/user/: index.vue
server/: font.ts  gen-type.mjs
server/api/: build-font.ts  font-server.ts  github-endpoint.ts  import-from-github.ts  prebuild-font.ts  test.ts
server/api/ai/: [...].ts
server/api/cache/: clear.ts  list.ts
server/api/font-source/: [...].ts
server/api/oss/: upload.ts
server/api/source/: [...].ts
server/api/system/: cdn-changelog.ts  website-to-md.ts
server/api/zip/: get.ts  (+1 more)
server/utils/: Errors.ts  auth.ts  base64ToUtf8.ts  cache.ts  compose.ts  contentType.ts  s3Client.ts  sha256.ts  useSSE.ts  validation.ts  zip.ts
types/: database.types.ts
(+6 files in other folders)
