[package]
name = "zip-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
percent-encoding = "2.3.1"
reqwest = "0.12.12"
serde = {version="1.0.217",features=["derive"]}
serde_json = "1.0.138"
sha256 = "1.5.0"
tokio = {version="1.43.0",features=["full"]}
tower-http = {version="0.6.2",features=["full"]}
zip = "2.2.2"
